--- a/application/src/style.css
+++ b/application/src/style.css
@@ -126,6 +126,7 @@ img[id='logo'] {
 @media screen and (max-width:700px) {
     .block {
         flex-direction: column;
+        flex-direction: row;
     }
 
     .block__text {
